# Project_2024_G24

./: Report.md  sample.cpp
bitonic_sort/: 1024.grace_job  128.grace_job  16.grace_job  2.grace_job  256.grace_job  32.grace_job  4.grace_job  512.grace_job  64.grace_job  8.grace_job  CMakeLists.txt  bitonic_sort.cpp  mpi.grace_job  queue-1024.sh  queue-128.sh  queue-16.sh  queue-2.sh  queue-256.sh  queue-32.sh  queue-4.sh  queue-512.sh  queue-64.sh  queue-8.sh
bitonic_sort/analysis/: analysis.ipynb
merge_sort/: CMakeLists.txt  merge_sort.cpp  mpi.grace_job
merge_sort/caliFiles/: p128-a1048576-1_perc_perturbed.cali  p128-a1048576-Random.cali  p128-a1048576-ReverseSorted.cali  (+250 more)
radix_sort/: generateShell.py  radix_sort.cpp  radix_sort_analysis.ipynb
sample/: generate.sh  mpi.grace_job  sample.cpp
sample_sort/: CMakeLists.txt  generate.sh  mpi.grace_job  sample.cpp  sample.ipynb
sample_sort/cali/: p1-a16-t0.cali  p1-a16-t1.cali  p1-a16-t2.cali  p1-a16-t3.cali  p1-a18-t0.cali  p1-a18-t1.cali  p1-a18-t2.cali  p1-a18-t3.cali  p1-a20-t0.cali  p1-a20-t1.cali  p1-a20-t2.cali  p1-a20-t3.cali  p1-a22-t0.cali  p1-a22-t1.cali  p1-a22-t2.cali  p1-a22-t3.cali  p1-a24-t0.cali  p1-a24-t1.cali  p1-a24-t2.cali  p1-a24-t3.cali  p1-a26-t0.cali  p1-a26-t1.cali  p1-a26-t2.cali  p1-a26-t3.cali  p1-a28-t0.cali  p1-a28-t1.cali  p1-a28-t2.cali  p1-a28-t3.cali  p1024-a16-t0.cali  p1024-a16-t1.cali  p1024-a16-t2.cali  p1024-a16-t3.cali  p1024-a18-t0.cali  p1024-a18-t1.cali  p1024-a18-t2.cali  p1024-a18-t3.cali  p1024-a20-t0.cali  p1024-a20-t1.cali  p1024-a20-t2.cali  p1024-a20-t3.cali  (+267 more)
(+543 files in other folders)
